bk_ida/gccida/g3/anti_dependence
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/anti_dependence/src/alias.c:2708:4: error: expected ';' after expression
rtx base_term; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/anti_dependence/src/alias.c:2708:5: error: use of undeclared identifier 'base_term'
rtx base_term; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/anti_dependence/src/alias.c:2720:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = ( __int64 *)mem[1]; 
                 ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/anti_dependence/src/alias.c:2723:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( __int64 *)x[1]; 
                 ^~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/anti_dependence/src/alias.c:2746:1: error: use of undeclared identifier 'base_term'
base_term = find_base_term( addr_0); 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/anti_dependence/src/alias.c:2747:6: error: use of undeclared identifier 'base_term'
if ( base_term ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/anti_dependence/src/alias.c:2749:17: error: use of undeclared identifier 'base_term'
if ( *( _WORD *)base_term == 67 || ( *( _DWORD *)base_term & 0x400FFFF) == 67108932 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/anti_dependence/src/alias.c:2749:50: error: use of undeclared identifier 'base_term'
if ( *( _WORD *)base_term == 67 || ( *( _DWORD *)base_term & 0x400FFFF) == 67108932 ) 
                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/anti_dependence/src/alias.c:2755:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/anti_dependence/src/alias.c:2756:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)mem + 2)) ) 
  ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/anti_dependence/src/obj/alias.o] Error 1
